argocd-managed/friend-tracker/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: friend-tracker
spec:
  selector:
    matchLabels:
      app: friend-tracker
  replicas: 1
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: friend-tracker
    spec:
      containers:
        - name: friend-tracker
          image: ghcr.io/bierteam/runelite-live-friend-locations-api:2.0.1
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "64Mi"
              cpu: "20m"
            limits:
              memory: "64Mi"
              cpu: "20m"
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
