argocd-managed/friend-tracker/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: friend-tracker
spec:
  selector:
    app: friend-tracker
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
