argocd-managed/friend-tracker/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: friend-tracker
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`friend-tracker.lab.oscarr.nl`)
      kind: Rule
      services:
        - name: friend-tracker
          port: 80
